# text-recognition

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  build.bat  build.spec  main.py  pyproject.toml  requirements.txt  run.bat
src/textrecog/: app.py  capture.py  config.py  diagnostics.py  hotkey.py  ocr.py  overlay.py  result_window.py  settings_dialog.py  startup.py  tray.py  ui.py
tools/: make_icon.py
