[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textrecog"
version = "0.1.0"
description = "Windows screen-region OCR utility (Chinese + English)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"textrecog" = ["resources/*"]
